# Incalmo-Guardrails

./: .dockerignore  .env.example  .gitignore  README.md  count_bad.py  main.py  pyproject.toml  replay_actions.py
config/: attacker_config.py  config_example.json  config_example_state_machine.json
docker/: docker-compose.yml  low_level_action_orchestrator.py
docker/adminserver/: Dockerfile  index.html
docker/attacker/: start.sh
incalmo/: incalmo_runner.py
incalmo/api/: server_api.py
incalmo/c2server/: c2server.py  state_store.py
output/: .gitignore
output/Sanity check, basic example_main_task_2026-04-15_18-55-34/: actions.json
output/admin-server-no-guardrails_main_task_2026-04-20_12-23-31/: actions.json
output/admin-server-no-guardrails_main_task_2026-04-20_12-36-07/: actions.json
output/admin-server-no-guardrails_main_task_2026-04-20_12-49-24/: actions.json
output/admin-server-no-guardrails_main_task_2026-04-20_12-58-57/: actions.json
output/admin-server-no-guardrails_main_task_2026-04-20_13-12-03/: actions.json
output/admin-server-no-guardrails_main_task_2026-04-20_15-12-30/: actions.json
output/critical-server-no-guardrails_main_task_2026-04-25_15-27-42/: actions.json
output/critical-server-no-guardrails_main_task_2026-04-25_15-44-00/: actions.json
output/critical-server-no-guardrails_main_task_2026-04-25_15-59-28/: actions.json
output/critical-server-no-guardrails_main_task_2026-04-25_16-33-40/: actions.json
output/critical-server-no-guardrails_main_task_2026-04-25_17-09-30/: actions.json
output/example_output/: results.json  (+1 more)
(+104 files in other folders)
